# percival-osm

./: .bandit  .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  osm.py  pyproject.toml
docs/security/: incident-response.md  nanobot-policy.md  threat-model.md  vulnerability-exceptions.md
src/percival_osm_mcp/: __init__.py  osm_primitives.py  server.py
tests/: test_runtime_security.py  test_s0_output_hardening.py  test_s1_runtime_hardening.py  test_s2_prompt_injection_regression.py  test_s3_observability.py  test_s4_new_tools.py  test_s5_primitives.py
tests/fixtures/: prompt_injection_corpus.json
