[project]
name = "percival-osm"
version = "0.1.0"
description = "Percival OSM — MCP server to query OpenStreetMap for information and nearby points of interest (percival.OS component)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.1",
    "openrouteservice>=2.3.3",
]
