[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "percival-osm"
version = "0.2.0"
description = "Percival OSM MCP server for geospatial search and routing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.12.0",
  "httpx>=0.28.1",
  "openrouteservice>=2.3.3",
  "pydantic-settings>=2.10.1",
  "starlette>=0.45.0",
  "uvicorn>=0.34.0",
]

[project.scripts]
percival-osm-mcp = "percival_osm_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/percival_osm_mcp"]

[dependency-groups]
dev = [
  "bandit>=1.8.0",
  "pip-audit>=2.7.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
